changes to user ratings logic
This reverts some prior changes and
makes a new API for getting the
summary as it is best separated from
the user rating query.